Fix hero button visibility, fix text appearance

--- a/client/styles/bootstrap/utilities/_typography.scss
+++ b/client/styles/bootstrap/utilities/_typography.scss
@@ -53,3 +53,7 @@ h6,
 .h6 {
   font-family: 'Archivo', sans-serif;
 }
+
+.ant-typography-edit-content {
+  color: $black;
+}
